--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jackson.serialization.fail-on-empty-beans=false
+
 #JWT properties
 app.jwt-secret=JWTSecretKey
 app.jwt-expiration-milliseconds=604800000
