--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ app.jwt-expiration-milliseconds=604800000
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 #SendGrid properties
-app.sendgrid.key=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
+app.sendgrid.key=
